--- a/CSS'S/FAQ.css
+++ b/CSS'S/FAQ.css
@@ -42,7 +42,7 @@
 #faq p {
     color: var(--branco-color);
     font-weight: 300;
-    font-size: 14px;
+    font-size: 13px;
     border: 0.2px solid rgb(53, 53, 53);
     padding: 8px 10px 8px 10px;
 }
@@ -62,7 +62,7 @@
 
      #faq summary {
         border: 0.2px solid rgb(53, 53, 53) ;
-        padding: 10px 13px 10px 13px;
+        padding: 13px;
         display: flex;
         font-weight: 600;
         list-style: none;
